dfir_rs/tests/compile-fail-stable/surface_reduce_keyed_badtype_option.rs
../compile-fail/surface_reduce_keyed_badtype_option.rs